// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-sharp base64 converts image to base64 1`] = `
Object {
  "aspectRatio": 1,
  "height": 20,
  "originalName": "test.png",
  "width": 20,
}
`;

exports[`gatsby-plugin-sharp base64 converts image to base64 2`] = `"ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fb2500fb2500fb2500fc2500ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fe2600ff2800ff2800ff2800ff2800fe2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800fb2700cd1e00a41800ab1800db2000ff2800fe2800fd2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800cc1e00370700000000010000000000040000580c00e82300ff2800fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800cb1e00100200000000010000020000010000020000000000330600ee2300ff2700fe2600ff2600ff2600ff2600ff2600ff2600fe2600ff2600fd26003a08000000000601000000000000000000000100000701000000006f1000ff2800fc2500ff2600ff2600ff2600ff2600ff2600fc2600ff2800c51c000000000100000000000000000000000000000000000100000000001d0400ef2300ff2700fe2600ff2600ff2600ff2600ff2600fc2500ff2800981600000000030000000000000000000000000000000000000000000000000000d11f00ff2800fd2600ff2600ff2600ff2600ff2600fc2500ff28009d1700000000030000000000000000000000000000000000000000000000020000d41f00ff2800fd2600ff2600ff2600ff2600ff2600fd2600ff2800ce1e00010000010000000000000000000000000000000000020000000000250500f52400ff2600fe2600ff2600ff2600ff2600ff2600ff2600fe2600ff27004b0a00000000070100020000000000000000030000060100000000821300ff2800fc2500ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2700df21002404000000000200000000000000000200000000004e0b00fa2600ff2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800e322005c0d000d02000000000000001803007e1200f62500ff2700fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2500fe2700ff2800e82200c91e00cd1e00f12400ff2900fd2700fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fd2600ff2700ff2800ff2800ff2700fd2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600fb2500fb2500fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600"`;

exports[`gatsby-plugin-sharp base64 should support option: 'background' 1`] = `
Object {
  "aspectRatio": 1,
  "height": 20,
  "originalName": "alphatest.png",
  "src": "data:image/jpeg;base64,/9j/2wBDABALDA4MChAODQ4SERATGCgaGBYWGDEjJR0oOjM9PDkzODdASFxOQERXRTc4UG1RV19iZ2hnPk1xeXBkeFxlZ2P/2wBDARESEhgVGC8aGi9jQjhCY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2NjY2P/wgARCAAUABQDASIAAhEBAxEB/8QAFQABAQAAAAAAAAAAAAAAAAAAAAb/xAAUAQEAAAAAAAAAAAAAAAAAAAAA/9oADAMBAAIQAxAAAAGfAAAB/8QAFBABAAAAAAAAAAAAAAAAAAAAMP/aAAgBAQABBQIf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAwEBPwEf/8QAFBEBAAAAAAAAAAAAAAAAAAAAIP/aAAgBAgEBPwEf/8QAFBABAAAAAAAAAAAAAAAAAAAAMP/aAAgBAQAGPwIf/8QAFBABAAAAAAAAAAAAAAAAAAAAMP/aAAgBAQABPyEf/9oADAMBAAIAAwAAABAAAAD/xAAUEQEAAAAAAAAAAAAAAAAAAAAg/9oACAEDAQE/EB//xAAUEQEAAAAAAAAAAAAAAAAAAAAg/9oACAECAQE/EB//xAAUEAEAAAAAAAAAAAAAAAAAAAAw/9oACAEBAAE/EB//2Q==",
  "width": 20,
}
`;

exports[`gatsby-plugin-sharp duotone fixed 1`] = `
Object {
  "aspectRatio": 1,
  "height": 100,
  "originalName": "test.png",
  "src": "/static/1234/31820/test.png",
  "srcSet": "/static/1234/31820/test.png 1x",
  "tracedSVG": undefined,
  "width": 100,
}
`;

exports[`gatsby-plugin-sharp duotone fixed 2`] = `"ed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6cb6756bb6756bd77c6ced816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c8e6d686766666766666766666766668e6d68d77c6ced816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c6766666766666766666766666766666766666766668e6d68ed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816e8e6d686766666766666766666766666766666766666766666766668e6d68ed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c676666676666676666676666676666676666676666676666676666676666ed816eed816eed816eed816eed816eed816eed816eed816eed816eb6756b676666676666676666676666676666676666676666676666676666676666d77c6ced816eed816eed816eed816eed816eed816eed816eed816eb6756b676666676666676666676666676666676666676666676666676666676666d77c6ced816eed816eed816eed816eed816eed816eed816eed816ed77c6c676666676666676666676666676666676666676666676666676666676666ed816eed816eed816eed816eed816eed816eed816eed816eed816eed816e8e6d68676666676666676666676666676666676666676666676666b6756bed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c6766666766666766666766666766666766666766668e6d68ed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c8e6d68676666676666676666676666b6756bed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6cd77c6cd77c6ced816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816e"`;

exports[`gatsby-plugin-sharp duotone fluid 1`] = `
Object {
  "aspectRatio": 1,
  "density": 72,
  "originalImg": "/static/1234/31820/test.png",
  "originalName": "test.png",
  "presentationHeight": 100,
  "presentationWidth": 100,
  "sizes": "(max-width: 100px) 100vw, 100px",
  "src": "/static/1234/31820/test.png",
  "srcSet": "/static/1234/c6018/test.png 25w,
/static/1234/c752e/test.png 50w,
/static/1234/31820/test.png 100w",
  "srcSetType": "image/png",
  "tracedSVG": undefined,
}
`;

exports[`gatsby-plugin-sharp duotone fluid 2`] = `"ed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6cb6756bb6756bd77c6ced816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c8e6d686766666766666766666766668e6d68d77c6ced816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c6766666766666766666766666766666766666766668e6d68ed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816e8e6d686766666766666766666766666766666766666766666766668e6d68ed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c676666676666676666676666676666676666676666676666676666676666ed816eed816eed816eed816eed816eed816eed816eed816eed816eb6756b676666676666676666676666676666676666676666676666676666676666d77c6ced816eed816eed816eed816eed816eed816eed816eed816eb6756b676666676666676666676666676666676666676666676666676666676666d77c6ced816eed816eed816eed816eed816eed816eed816eed816ed77c6c676666676666676666676666676666676666676666676666676666676666ed816eed816eed816eed816eed816eed816eed816eed816eed816eed816e8e6d68676666676666676666676666676666676666676666676666b6756bed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c6766666766666766666766666766666766666766668e6d68ed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6c8e6d68676666676666676666676666b6756bed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816ed77c6cd77c6cd77c6ced816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816eed816e"`;

exports[`gatsby-plugin-sharp fixed correctly infers the width when only the height is given 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "height": 10,
                "toFormat": "png",
              },
              "outputPath": "42b9e/test.png",
            },
            Object {
              "args": Object {
                "height": 15,
                "toFormat": "png",
              },
              "outputPath": "694e0/test.png",
            },
            Object {
              "args": Object {
                "height": 20,
                "toFormat": "png",
              },
              "outputPath": "b4fe6/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fixed does not warn when the requested width is equal to the image width 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 1,
              },
              "outputPath": "89172/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 2,
              },
              "outputPath": "002c7/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 2,
              },
              "outputPath": "002c7/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/test.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fixed warns when the requested width is greater than the image width 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 100,
              },
              "outputPath": "7e516/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/test.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fluid accepts srcSet breakpoints 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 50,
              },
              "outputPath": "a1812/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 70,
              },
              "outputPath": "1aade/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 150,
              },
              "outputPath": "8a4e8/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 250,
              },
              "outputPath": "63868/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 281,
              },
              "outputPath": "6b1e2/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fluid adds pathPrefix if defined 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 100,
              },
              "outputPath": "7e516/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/test.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fluid calculate height based on width when maxWidth & maxHeight are present 1`] = `
Array [
  Array [
    Object {
      "args": Object {
        "isLazy": false,
        "operations": Array [
          Object {
            "args": Object {
              "height": 5,
              "toFormat": "png",
              "width": 5,
            },
            "outputPath": "9363c/test.png",
          },
          Object {
            "args": Object {
              "height": 10,
              "toFormat": "png",
              "width": 10,
            },
            "outputPath": "480f5/test.png",
          },
          Object {
            "args": Object {
              "height": 20,
              "toFormat": "png",
              "width": 20,
            },
            "outputPath": "cad77/test.png",
          },
          Object {
            "args": Object {
              "height": 30,
              "toFormat": "png",
              "width": 30,
            },
            "outputPath": "ef107/test.png",
          },
          Object {
            "args": Object {
              "height": 40,
              "toFormat": "png",
              "width": 40,
            },
            "outputPath": "4fa69/test.png",
          },
          Object {
            "args": Object {
              "height": 281,
              "toFormat": "png",
              "width": 281,
            },
            "outputPath": "1a70e/test.png",
          },
        ],
        "pluginOptions": Object {
          "base64Width": 20,
          "defaultQuality": 50,
          "failOn": "warning",
          "forceBase64Format": "",
          "lazyImageGeneration": true,
          "stripMetadata": true,
          "useMozJpeg": false,
        },
      },
      "inputPaths": Array [
        "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
      ],
      "name": "IMAGE_PROCESSING",
      "outputDir": "<PROJECT_ROOT>/public/static/1234",
    },
  ],
]
`;

exports[`gatsby-plugin-sharp fluid calculate height based on width when maxWidth & maxHeight are present 2`] = `
Array [
  Array [
    Object {
      "args": Object {
        "isLazy": false,
        "operations": Array [
          Object {
            "args": Object {
              "fit": "fill",
              "height": 5,
              "toFormat": "png",
              "width": 5,
            },
            "outputPath": "f018e/test.png",
          },
          Object {
            "args": Object {
              "fit": "fill",
              "height": 10,
              "toFormat": "png",
              "width": 10,
            },
            "outputPath": "40ed2/test.png",
          },
          Object {
            "args": Object {
              "fit": "fill",
              "height": 20,
              "toFormat": "png",
              "width": 20,
            },
            "outputPath": "ec252/test.png",
          },
          Object {
            "args": Object {
              "fit": "fill",
              "height": 30,
              "toFormat": "png",
              "width": 30,
            },
            "outputPath": "d228c/test.png",
          },
          Object {
            "args": Object {
              "fit": "fill",
              "height": 40,
              "toFormat": "png",
              "width": 40,
            },
            "outputPath": "48fd7/test.png",
          },
          Object {
            "args": Object {
              "fit": "fill",
              "height": 281,
              "toFormat": "png",
              "width": 281,
            },
            "outputPath": "b9b70/test.png",
          },
        ],
        "pluginOptions": Object {
          "base64Width": 20,
          "defaultQuality": 50,
          "failOn": "warning",
          "forceBase64Format": "",
          "lazyImageGeneration": true,
          "stripMetadata": true,
          "useMozJpeg": false,
        },
      },
      "inputPaths": Array [
        "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
      ],
      "name": "IMAGE_PROCESSING",
      "outputDir": "<PROJECT_ROOT>/public/static/1234",
    },
  ],
]
`;

exports[`gatsby-plugin-sharp fluid calculate height based on width when maxWidth & maxHeight are present 3`] = `
Array [
  Array [
    Object {
      "args": Object {
        "isLazy": false,
        "operations": Array [
          Object {
            "args": Object {
              "fit": "inside",
              "height": 5,
              "toFormat": "png",
              "width": 5,
            },
            "outputPath": "068c4/test.png",
          },
          Object {
            "args": Object {
              "fit": "inside",
              "height": 10,
              "toFormat": "png",
              "width": 10,
            },
            "outputPath": "ffe9f/test.png",
          },
          Object {
            "args": Object {
              "fit": "inside",
              "height": 20,
              "toFormat": "png",
              "width": 20,
            },
            "outputPath": "d4f5e/test.png",
          },
          Object {
            "args": Object {
              "fit": "inside",
              "height": 30,
              "toFormat": "png",
              "width": 30,
            },
            "outputPath": "33bda/test.png",
          },
          Object {
            "args": Object {
              "fit": "inside",
              "height": 40,
              "toFormat": "png",
              "width": 40,
            },
            "outputPath": "f5042/test.png",
          },
          Object {
            "args": Object {
              "fit": "inside",
              "height": 281,
              "toFormat": "png",
              "width": 281,
            },
            "outputPath": "7aa47/test.png",
          },
        ],
        "pluginOptions": Object {
          "base64Width": 20,
          "defaultQuality": 50,
          "failOn": "warning",
          "forceBase64Format": "",
          "lazyImageGeneration": true,
          "stripMetadata": true,
          "useMozJpeg": false,
        },
      },
      "inputPaths": Array [
        "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
      ],
      "name": "IMAGE_PROCESSING",
      "outputDir": "<PROJECT_ROOT>/public/static/1234",
    },
  ],
]
`;

exports[`gatsby-plugin-sharp fluid calculate height based on width when maxWidth & maxHeight are present 4`] = `
Array [
  Array [
    Object {
      "args": Object {
        "isLazy": false,
        "operations": Array [
          Object {
            "args": Object {
              "fit": "outside",
              "height": 5,
              "toFormat": "png",
              "width": 5,
            },
            "outputPath": "484a6/test.png",
          },
          Object {
            "args": Object {
              "fit": "outside",
              "height": 10,
              "toFormat": "png",
              "width": 10,
            },
            "outputPath": "02248/test.png",
          },
          Object {
            "args": Object {
              "fit": "outside",
              "height": 20,
              "toFormat": "png",
              "width": 20,
            },
            "outputPath": "a30d6/test.png",
          },
          Object {
            "args": Object {
              "fit": "outside",
              "height": 30,
              "toFormat": "png",
              "width": 30,
            },
            "outputPath": "e240e/test.png",
          },
          Object {
            "args": Object {
              "fit": "outside",
              "height": 40,
              "toFormat": "png",
              "width": 40,
            },
            "outputPath": "c993a/test.png",
          },
          Object {
            "args": Object {
              "fit": "outside",
              "height": 281,
              "toFormat": "png",
              "width": 281,
            },
            "outputPath": "9b0d3/test.png",
          },
        ],
        "pluginOptions": Object {
          "base64Width": 20,
          "defaultQuality": 50,
          "failOn": "warning",
          "forceBase64Format": "",
          "lazyImageGeneration": true,
          "stripMetadata": true,
          "useMozJpeg": false,
        },
      },
      "inputPaths": Array [
        "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
      ],
      "name": "IMAGE_PROCESSING",
      "outputDir": "<PROJECT_ROOT>/public/static/1234",
    },
  ],
]
`;

exports[`gatsby-plugin-sharp fluid calculate height based on width when maxWidth & maxHeight are present 5`] = `
Array [
  Array [
    Object {
      "args": Object {
        "isLazy": false,
        "operations": Array [
          Object {
            "args": Object {
              "height": 50,
              "toFormat": "png",
              "width": 50,
            },
            "outputPath": "be55a/test.png",
          },
          Object {
            "args": Object {
              "height": 100,
              "toFormat": "png",
              "width": 100,
            },
            "outputPath": "f56f3/test.png",
          },
          Object {
            "args": Object {
              "height": 200,
              "toFormat": "png",
              "width": 200,
            },
            "outputPath": "14fcf/test.png",
          },
          Object {
            "args": Object {
              "height": 281,
              "toFormat": "png",
              "width": 281,
            },
            "outputPath": "1a70e/test.png",
          },
        ],
        "pluginOptions": Object {
          "base64Width": 20,
          "defaultQuality": 50,
          "failOn": "warning",
          "forceBase64Format": "",
          "lazyImageGeneration": true,
          "stripMetadata": true,
          "useMozJpeg": false,
        },
      },
      "inputPaths": Array [
        "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
      ],
      "name": "IMAGE_PROCESSING",
      "outputDir": "<PROJECT_ROOT>/public/static/1234",
    },
  ],
]
`;

exports[`gatsby-plugin-sharp fluid calculate height based on width when maxWidth & maxHeight are present 6`] = `
Array [
  Array [
    Object {
      "args": Object {
        "isLazy": false,
        "operations": Array [
          Object {
            "args": Object {
              "fit": "fill",
              "height": 50,
              "toFormat": "png",
              "width": 50,
            },
            "outputPath": "5e5c6/test.png",
          },
          Object {
            "args": Object {
              "fit": "fill",
              "height": 100,
              "toFormat": "png",
              "width": 100,
            },
            "outputPath": "ad3ed/test.png",
          },
          Object {
            "args": Object {
              "fit": "fill",
              "height": 200,
              "toFormat": "png",
              "width": 200,
            },
            "outputPath": "9e7dd/test.png",
          },
          Object {
            "args": Object {
              "fit": "fill",
              "height": 281,
              "toFormat": "png",
              "width": 281,
            },
            "outputPath": "b9b70/test.png",
          },
        ],
        "pluginOptions": Object {
          "base64Width": 20,
          "defaultQuality": 50,
          "failOn": "warning",
          "forceBase64Format": "",
          "lazyImageGeneration": true,
          "stripMetadata": true,
          "useMozJpeg": false,
        },
      },
      "inputPaths": Array [
        "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
      ],
      "name": "IMAGE_PROCESSING",
      "outputDir": "<PROJECT_ROOT>/public/static/1234",
    },
  ],
]
`;

exports[`gatsby-plugin-sharp fluid calculate height based on width when maxWidth & maxHeight are present 7`] = `
Array [
  Array [
    Object {
      "args": Object {
        "isLazy": false,
        "operations": Array [
          Object {
            "args": Object {
              "fit": "inside",
              "height": 34,
              "toFormat": "png",
              "width": 50,
            },
            "outputPath": "45628/test.png",
          },
          Object {
            "args": Object {
              "fit": "inside",
              "height": 68,
              "toFormat": "png",
              "width": 100,
            },
            "outputPath": "52a18/test.png",
          },
          Object {
            "args": Object {
              "fit": "inside",
              "height": 136,
              "toFormat": "png",
              "width": 200,
            },
            "outputPath": "279d8/test.png",
          },
          Object {
            "args": Object {
              "fit": "inside",
              "height": 191,
              "toFormat": "png",
              "width": 281,
            },
            "outputPath": "24238/test.png",
          },
        ],
        "pluginOptions": Object {
          "base64Width": 20,
          "defaultQuality": 50,
          "failOn": "warning",
          "forceBase64Format": "",
          "lazyImageGeneration": true,
          "stripMetadata": true,
          "useMozJpeg": false,
        },
      },
      "inputPaths": Array [
        "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
      ],
      "name": "IMAGE_PROCESSING",
      "outputDir": "<PROJECT_ROOT>/public/static/1234",
    },
  ],
]
`;

exports[`gatsby-plugin-sharp fluid calculate height based on width when maxWidth & maxHeight are present 8`] = `
Array [
  Array [
    Object {
      "args": Object {
        "isLazy": false,
        "operations": Array [
          Object {
            "args": Object {
              "fit": "outside",
              "height": 50,
              "toFormat": "png",
              "width": 50,
            },
            "outputPath": "2bae6/test.png",
          },
          Object {
            "args": Object {
              "fit": "outside",
              "height": 100,
              "toFormat": "png",
              "width": 100,
            },
            "outputPath": "c2888/test.png",
          },
          Object {
            "args": Object {
              "fit": "outside",
              "height": 200,
              "toFormat": "png",
              "width": 200,
            },
            "outputPath": "518f4/test.png",
          },
          Object {
            "args": Object {
              "fit": "outside",
              "height": 281,
              "toFormat": "png",
              "width": 281,
            },
            "outputPath": "9b0d3/test.png",
          },
        ],
        "pluginOptions": Object {
          "base64Width": 20,
          "defaultQuality": 50,
          "failOn": "warning",
          "forceBase64Format": "",
          "lazyImageGeneration": true,
          "stripMetadata": true,
          "useMozJpeg": false,
        },
      },
      "inputPaths": Array [
        "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
      ],
      "name": "IMAGE_PROCESSING",
      "outputDir": "<PROJECT_ROOT>/public/static/1234",
    },
  ],
]
`;

exports[`gatsby-plugin-sharp fluid does not change the arguments object it is given 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 100,
              },
              "outputPath": "7e516/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/test.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fluid ensure maxWidth is in srcSet breakpoints 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 50,
              },
              "outputPath": "a1812/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 70,
              },
              "outputPath": "1aade/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 150,
              },
              "outputPath": "8a4e8/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 200,
              },
              "outputPath": "772e8/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 281,
              },
              "outputPath": "6b1e2/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fluid includes responsive image properties, e.g. sizes, srcset, etc. 1`] = `
Object {
  "aspectRatio": 1,
  "density": 72,
  "originalImg": "/static/1234/7e516/test.png",
  "originalName": "test.png",
  "presentationHeight": 100,
  "presentationWidth": 100,
  "sizes": "(max-width: 100px) 100vw, 100px",
  "src": "/static/1234/7e516/test.png",
  "srcSet": "/static/1234/7e516/test.png 100w",
  "srcSetType": "image/png",
  "tracedSVG": undefined,
}
`;

exports[`gatsby-plugin-sharp fluid includes responsive image properties, e.g. sizes, srcset, etc. 2`] = `"ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fb2500fb2500fb2500fc2500ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fe2600ff2800ff2800ff2800ff2800fe2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800fb2700cd1e00a41800ab1800db2000ff2800fe2800fd2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800cc1e00370700000000010000000000040000580c00e82300ff2800fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800cb1e00100200000000010000020000010000020000000000330600ee2300ff2700fe2600ff2600ff2600ff2600ff2600ff2600fe2600ff2600fd26003a08000000000601000000000000000000000100000701000000006f1000ff2800fc2500ff2600ff2600ff2600ff2600ff2600fc2600ff2800c51c000000000100000000000000000000000000000000000100000000001d0400ef2300ff2700fe2600ff2600ff2600ff2600ff2600fc2500ff2800981600000000030000000000000000000000000000000000000000000000000000d11f00ff2800fd2600ff2600ff2600ff2600ff2600fc2500ff28009d1700000000030000000000000000000000000000000000000000000000020000d41f00ff2800fd2600ff2600ff2600ff2600ff2600fd2600ff2800ce1e00010000010000000000000000000000000000000000020000000000250500f52400ff2600fe2600ff2600ff2600ff2600ff2600ff2600fe2600ff27004b0a00000000070100020000000000000000030000060100000000821300ff2800fc2500ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2700df21002404000000000200000000000000000200000000004e0b00fa2600ff2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800e322005c0d000d02000000000000001803007e1200f62500ff2700fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2500fe2700ff2800e82200c91e00cd1e00f12400ff2900fd2700fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fd2600ff2700ff2800ff2800ff2700fd2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600fb2500fb2500fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600"`;

exports[`gatsby-plugin-sharp fluid infers the maxWidth if only maxHeight is given 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "height": 5,
                "toFormat": "png",
              },
              "outputPath": "b9f44/test.png",
            },
            Object {
              "args": Object {
                "height": 10,
                "toFormat": "png",
              },
              "outputPath": "16a76/test.png",
            },
            Object {
              "args": Object {
                "height": 20,
                "toFormat": "png",
              },
              "outputPath": "575c0/test.png",
            },
            Object {
              "args": Object {
                "height": 30,
                "toFormat": "png",
              },
              "outputPath": "60fd6/test.png",
            },
            Object {
              "args": Object {
                "height": 40,
                "toFormat": "png",
              },
              "outputPath": "f9d8a/test.png",
            },
            Object {
              "args": Object {
                "height": 136,
                "toFormat": "png",
              },
              "outputPath": "bfabc/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fluid keeps original file name 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 100,
              },
              "outputPath": "7e516/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/test.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fluid prevents duplicate breakpoints 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 50,
              },
              "outputPath": "a1812/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 100,
              },
              "outputPath": "7e516/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 250,
              },
              "outputPath": "63868/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 281,
              },
              "outputPath": "6b1e2/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fluid reject any breakpoints larger than the original width 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 50,
              },
              "outputPath": "a1812/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 70,
              },
              "outputPath": "1aade/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 150,
              },
              "outputPath": "8a4e8/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 250,
              },
              "outputPath": "63868/test.png",
            },
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 281,
              },
              "outputPath": "6b1e2/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp fluid should throw if maxWidth is less than 1 1`] = `[MockFunction]`;

exports[`gatsby-plugin-sharp fluid should throw on srcSet breakpoints less than 1 1`] = `[MockFunction]`;

exports[`gatsby-plugin-sharp image quirks handles padding bytes correctly 1`] = `
Object {
  "hUnits": "px",
  "height": 1000,
  "mime": "image/jpeg",
  "type": "jpg",
  "wUnits": "px",
  "width": 746,
}
`;

exports[`gatsby-plugin-sharp queueImageResizing file name works with spaces & special characters createJobV2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 3,
              },
              "outputPath": "4a20d/spaces and '\\"@#$%^&,.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp queueImageResizing should round height when auto-calculated createJobV2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "args": Object {
          "isLazy": false,
          "operations": Array [
            Object {
              "args": Object {
                "toFormat": "png",
                "width": 3,
              },
              "outputPath": "4a20d/test.png",
            },
          ],
          "pluginOptions": Object {
            "base64Width": 20,
            "defaultQuality": 50,
            "failOn": "warning",
            "forceBase64Format": "",
            "lazyImageGeneration": true,
            "stripMetadata": true,
            "useMozJpeg": false,
          },
        },
        "inputPaths": Array [
          "<PROJECT_ROOT>/packages/gatsby-plugin-sharp/src/__tests__/images/144-density.png",
        ],
        "name": "IMAGE_PROCESSING",
        "outputDir": "<PROJECT_ROOT>/public/static/1234",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`gatsby-plugin-sharp stats determines if the image is transparent, based on the presence and use of alpha channel 1`] = `
Object {
  "isTransparent": false,
}
`;

exports[`gatsby-plugin-sharp stats determines if the image is transparent, based on the presence and use of alpha channel 2`] = `
Object {
  "isTransparent": true,
}
`;

exports[`gatsby-plugin-sharp tracedSVG runs on demand (and falls back to blurred) 1`] = `"ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fb2500fb2500fb2500fc2500ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fe2600ff2800ff2800ff2800ff2800fe2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800fb2700cd1e00a41800ab1800db2000ff2800fe2800fd2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800cc1e00370700000000010000000000040000580c00e82300ff2800fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800cb1e00100200000000010000020000010000020000000000330600ee2300ff2700fe2600ff2600ff2600ff2600ff2600ff2600fe2600ff2600fd26003a08000000000601000000000000000000000100000701000000006f1000ff2800fc2500ff2600ff2600ff2600ff2600ff2600fc2600ff2800c51c000000000100000000000000000000000000000000000100000000001d0400ef2300ff2700fe2600ff2600ff2600ff2600ff2600fc2500ff2800981600000000030000000000000000000000000000000000000000000000000000d11f00ff2800fd2600ff2600ff2600ff2600ff2600fc2500ff28009d1700000000030000000000000000000000000000000000000000000000020000d41f00ff2800fd2600ff2600ff2600ff2600ff2600fd2600ff2800ce1e00010000010000000000000000000000000000000000020000000000250500f52400ff2600fe2600ff2600ff2600ff2600ff2600ff2600fe2600ff27004b0a00000000070100020000000000000000030000060100000000821300ff2800fc2500ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2700df21002404000000000200000000000000000200000000004e0b00fa2600ff2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800e322005c0d000d02000000000000001803007e1200f62500ff2700fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2500fe2700ff2800e82200c91e00cd1e00f12400ff2900fd2700fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fd2600ff2700ff2800ff2800ff2700fd2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600fb2500fb2500fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600"`;

exports[`gatsby-plugin-sharp tracedSVG runs on demand (and falls back to blurred) 2`] = `"ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fb2500fb2500fb2500fc2500ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fe2600ff2800ff2800ff2800ff2800fe2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800fb2700cd1e00a41800ab1800db2000ff2800fe2800fd2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800cc1e00370700000000010000000000040000580c00e82300ff2800fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800cb1e00100200000000010000020000010000020000000000330600ee2300ff2700fe2600ff2600ff2600ff2600ff2600ff2600fe2600ff2600fd26003a08000000000601000000000000000000000100000701000000006f1000ff2800fc2500ff2600ff2600ff2600ff2600ff2600fc2600ff2800c51c000000000100000000000000000000000000000000000100000000001d0400ef2300ff2700fe2600ff2600ff2600ff2600ff2600fc2500ff2800981600000000030000000000000000000000000000000000000000000000000000d11f00ff2800fd2600ff2600ff2600ff2600ff2600fc2500ff28009d1700000000030000000000000000000000000000000000000000000000020000d41f00ff2800fd2600ff2600ff2600ff2600ff2600fd2600ff2800ce1e00010000010000000000000000000000000000000000020000000000250500f52400ff2600fe2600ff2600ff2600ff2600ff2600ff2600fe2600ff27004b0a00000000070100020000000000000000030000060100000000821300ff2800fc2500ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2700df21002404000000000200000000000000000200000000004e0b00fa2600ff2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600ff2800e322005c0d000d02000000000000001803007e1200f62500ff2700fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2500fe2700ff2800e82200c91e00cd1e00f12400ff2900fd2700fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fe2600fd2600ff2700ff2800ff2800ff2700fd2600fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600fd2600fb2500fb2500fe2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600ff2600"`;

exports[`gatsby-plugin-sharp tracedSVG runs on demand (and falls back to blurred): fixed 1`] = `
Object {
  "aspectRatio": 1,
  "base64": undefined,
  "height": 100,
  "originalName": "test.png",
  "src": "/static/1234/7e516/test.png",
  "srcSet": "/static/1234/7e516/test.png 1x",
  "width": 100,
}
`;

exports[`gatsby-plugin-sharp tracedSVG runs on demand (and falls back to blurred): fluid 1`] = `
Object {
  "aspectRatio": 1,
  "base64": undefined,
  "density": 72,
  "originalImg": "/static/1234/7e516/test.png",
  "originalName": "test.png",
  "presentationHeight": 100,
  "presentationWidth": 100,
  "sizes": "(max-width: 100px) 100vw, 100px",
  "src": "/static/1234/7e516/test.png",
  "srcSet": "/static/1234/7991c/test.png 25w,
/static/1234/a1812/test.png 50w,
/static/1234/7e516/test.png 100w",
  "srcSetType": "image/png",
}
`;
